# rag-plusplus

./: .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: PAPER.md
rag_plusplus/: __init__.py  version.py
rag_plusplus/service/: __init__.py  app.py
rag_plusplus/service/routes/: __init__.py  context_gateway.py
tests/service/: test_context_gateway.py
